# seniorenradio

./: .gitignore  README.md  main.py  pyproject.toml
.agent/rules/: general.md  python.md
.github/instructions/: general.instructions.md  python.instructions.md
config/: config.example.yaml
src/: __init__.py  audio.py  config.py  constants.py  controller.py  gpio.py  gpio_mock.py  main.py  models.py  network.py  tts.py
tests/: conftest.py  test_audio.py  test_config.py  test_controller.py  test_gpio.py  test_models.py  test_network.py  test_tts.py
