[project]
name = "seniorenradio"
version = "0.1.0"
description = "An easy-to-use and intuitive radio app for seniors to run on a Raspberry Pi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "python-mpv>=1.0.0",
    "RPi.GPIO>=0.7.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.50.1",
    "ruff>=0.14.14",
]

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM", "N", "C4", "PTH", "ANN"]

[tool.pyrefly]
report-unknown-variable-type = true
report-missing-type-argument = true
report-unnecessary-type-ignore-comment = true
project-includes = ["src/**/*.py"]